--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,7 +34,7 @@
                 android:textCursorDrawable="@null"
                 android:paddingStart="10dp"
                 android:layout_marginStart="5dp"
-                app:layout_constraintStart_toEndOf="@+id/img_smile"
+                app:layout_constraintStart_toEndOf="@+id/img_gif"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent" />
@@ -47,6 +47,17 @@
                 app:layout_constraintTop_toTopOf="@+id/et_write_something"
                 app:layout_constraintBottom_toBottomOf="@+id/et_write_something"
                 android:background="@drawable/ic_smile"
+                android:layout_marginStart="10dp"
+                android:padding="15dp" />
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/img_gif"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toEndOf="@+id/img_smile"
+                app:layout_constraintTop_toTopOf="@+id/et_write_something"
+                app:layout_constraintBottom_toBottomOf="@+id/et_write_something"
+                android:background="@drawable/ic_gif_new"
                 android:layout_marginStart="10dp"
                 android:padding="15dp" />
 
@@ -73,6 +84,16 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:textSize="15sp"
             android:textColor="@color/black"/>
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/img_show"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            app:layout_constraintTop_toBottomOf="@+id/tv_show"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="20dp"
+            android:visibility="gone"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
